# web-speed-test

./: .gitignore  LICENSE.md  README.md  index.html  index_2.html  loading_test.html  package-lock.json  package.json  pingTest.html  pyproject.toml  speedTest.php  speedTests.php  styles.css
css/: style_download.css  style_ping.css  styles.css
includes/: downloadTest.html  loading_test.html  pingTest.html
src/python_speed_test/: ping.py
src/web_speed_test/: __init__.py
